# PyQuick

./: README.rst  pyproject.toml  setup.py  tox.ini
PyQuick/: DOtherSide.py  Qt.py  QtCore.py  QtGui.py  QtQml.py  QtQuick.py  QtQuickControls.py  QtWidgets.py  __init__.py  utils.py
examples/: main.py  main.qml
tests/: test_qtcore.py
