[tool.poetry]
name = "PyQuick"
version = "0.0.1"
description = "Cffi wrapper of DOtherSide for pypy"
authors = ["SoulMelody"]
license = "GPL-3.0"
classifiers = [
    "Development Status :: 1 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Python :: Implementation :: PyPy",
]
readme = "README.rst"

[tool.poetry.dependencies]
wrapt = "*"
cffi = "*"
six = "*"
enum34 = "*; python_version < '3.4'"

[tool.poetry.dev-dependencies]
pytest = "*"
tox = "*"
virtualenv = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
